correction erreur js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,13 @@
   <%= render 'layouts/header'%>
   <%= yield %>
   <%= render 'layouts/footer'%>
+
+  <script type="text/javascript">
+  (function() {
+	  menu();
+	  searchbar();
+	  slider();
+	}());
+  </script>
 </body>
 </html>
