ajout des liens vers les categories sur le svg

--- a/app/views/home/_svg.html.erb
+++ b/app/views/home/_svg.html.erb
@@ -7,11 +7,10 @@
   .st3{fill:#FFFFFF;stroke:#FFFFFF;stroke-width:0.0369;stroke-miterlimit:10;}
 </style>
 <g id="catégories_1_">
-  <a xlink:href="<?= get_term_link( 'porte-fenetre', 'product_cat' ); ?>"><g id="peinture__x26__colles_1_">
+  <a xlink:href="<%= category_path('portes-colles') %>"><g id="peinture__x26__colles_1_">
     <g id="img_17_">
       <g id="Rectangle_31__x2B__Rectangle_28_copie_5_2_" class="st0">
         <defs>
-          
             <rect id="SVGID_1_" x="25.894" y="28.41" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -36.0139 83.3872)" class="st0" width="113.513" height="113.513"/>
         </defs>
         <clipPath id="SVGID_2_">
@@ -100,7 +99,7 @@
       </g>
     </g>
   </g></a>
-  <a xlink:href="<?= get_term_link( 'enduit', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('enduits') %>">
     <g id="Enduits_1_">
       <g id="img_16_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_4_" class="st0">
@@ -161,7 +160,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'economie-energie', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('economie-energie') %>">
     <g id="éco_d_x27_énergie_1_">
       <g id="img_15_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_6_" class="st0">
@@ -262,7 +261,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'bois', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('bois') %>">
     <g id="bois_1_">
       <g id="img_14_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_8_" class="st0">
@@ -318,7 +317,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'porte-fenetre', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('portes-fenetres') %>">
     <g id="portes__x26__fenetres_1_">
       <g id="img_13_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_10_" class="st0">
@@ -429,7 +428,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'gros-oeuvre', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('gros-oeuvre') %>">
     <g id="Gros_oeuvres_1_">
       <g id="img_12_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_12_" class="st0">
@@ -513,7 +512,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'production-energie', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('production-energie') %>">
     <g id="Prod_énergie_verte_1_">
       <g id="img_11_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_14_" class="st0">
@@ -639,7 +638,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'chauffage', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('chauffage') %>">
     <g id="Chauffage_1_">
       <g id="img_10_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_16_" class="st0">
@@ -732,7 +731,7 @@
       </g>
     </g>
   </a>
-  <a xlink:href="<?= get_term_link( 'isolation', 'product_cat' ); ?>">
+  <a xlink:href="<%= category_path('isolation') %>">
     <g id="Isolation_1_">
       <g id="img_9_">
         <g id="Rectangle_31__x2B__Rectangle_28_copie_5_18_" class="st0">
