ajout de liens dans le footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,11 +22,34 @@
             <%= link_to category_path('peintures-naturelles') do %>
               Peintures naturelles
             <% end %>
-          </p>
-          <?php woocommerce_subcats_from_parentcat_by_ID('6'); ?> 
+          </p> 
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('7'); ?>
+          <h5>
+            <%= link_to category_path('enduits') do %>
+              Enduits
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('charges-colorants-pour-enduits') do %>
+              Charges et colorants pour enduits
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('enduits-de-finitions') do %>
+              Enduits de finitions
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('enduits-exterieurs') do %>
+              Enduits exterieurs
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('enduits-interieurs') do %>
+              Enduits intérieurs
+            <% end %>
+          </p>
         </div>
         <div class="col-md-6">
           <?php woocommerce_subcats_from_parentcat_by_ID('8'); ?>  
@@ -34,37 +57,37 @@
         <div class="col-md-6">
           <?php woocommerce_subcats_from_parentcat_by_ID('10'); ?>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <?php woocommerce_subcats_from_parentcat_by_ID('11'); ?>   
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <?php woocommerce_subcats_from_parentcat_by_ID('11'); ?>   
-          </div>
-          <div class="col-md-6">
-            <?php woocommerce_subcats_from_parentcat_by_ID('13'); ?>
-          </div>
-          <div class="col-md-6">
-            <?php woocommerce_subcats_from_parentcat_by_ID('12'); ?> 
-          </div>
-          <div class="col-md-6">
-            <?php woocommerce_subcats_from_parentcat_by_ID('14'); ?>
-          </div>
+        <div class="col-md-6">
+          <?php woocommerce_subcats_from_parentcat_by_ID('13'); ?>
+        </div>
+        <div class="col-md-6">
+          <?php woocommerce_subcats_from_parentcat_by_ID('12'); ?> 
+        </div>
+        <div class="col-md-6">
+          <?php woocommerce_subcats_from_parentcat_by_ID('14'); ?>
         </div>
       </div>
-      <div class="col-md-3 col-md-offset-1 hidden-xs">
-        <?php woocommerce_subcats_from_parentcat_by_ID('9'); ?>
-      </div> 
-      <div class="col-md-6 col-xs-24 footer-social">
-        <p class="bold">Suivez nous :</p>
-        <a href="https://twitter.com/climateriaux" target="_blank" rel="nofollow" class="footer-social-twitter">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a href="https://fr-fr.facebook.com/climateriaux/" target="_blank" rel="nofollow" class="footer-social-facebook">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a href="https://www.linkedin.com/company/climat%C3%A9riaux" target="_blank" rel="nofollow" class="footer-social-linkedin">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
+    </div>
+    <div class="col-md-3 col-md-offset-1 hidden-xs">
+      <?php woocommerce_subcats_from_parentcat_by_ID('9'); ?>
+    </div> 
+    <div class="col-md-6 col-xs-24 footer-social">
+      <p class="bold">Suivez nous :</p>
+      <a href="https://twitter.com/climateriaux" target="_blank" rel="nofollow" class="footer-social-twitter">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a href="https://fr-fr.facebook.com/climateriaux/" target="_blank" rel="nofollow" class="footer-social-facebook">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/climat%C3%A9riaux" target="_blank" rel="nofollow" class="footer-social-linkedin">
+        <i class="fa fa-linkedin"></i>
+      </a>
+    </div>
   </div>
 </footer>
 <div class="footer-credits container-fluid">
