ajout des liens restant pour le footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -52,29 +52,232 @@
           </p>
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('8'); ?>  
+          <h5>
+            <%= link_to category_path('gros-oeuvre') do %>
+              Gros œuvre
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('briques-blocs') do %>
+              Briques et blocs
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('charpentes') do %>
+              Charpentes
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('chaux-terres-argiles') do %>
+              Chaux, terres et argiles
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('Plaques et panneaux') do %>
+              plaques-panneaux
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('preparation-des-supports') do %>
+              Préparation des supports
+            <% end %>
+          </p>
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('10'); ?>
+          <h5>
+            <%= link_to category_path('isolation') do %>
+              Isolation
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('isolation-humidite') do %>
+              Isolation à l'humidité
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('isolation-cloisons') do %>
+              Isolation des cloisons
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('isolation-combles') do %>
+              Isolation des combles
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('isolation-murs') do %>
+              Isolation des murs
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('isolation-sol') do %>
+              Isolation du sol
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('isolation-phonique') do %>
+              Isolation phonique
+            <% end %>
+          </p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('11'); ?>   
+          <h5>
+            <%= link_to category_path('portes-fenetres') do %>
+              Portes et fenêtres
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('fenetres') do %>
+              Fenêtres
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('portes') do %>
+              Portes
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('volets') do %>
+              Volets
+            <% end %>
+          </p>
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('13'); ?>
+          <h5>
+            <%= link_to category_path('chauffage') do %>
+              Chauffage
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('chauffage-eau') do %>
+              Chauffage de l'eau
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('Chauffe-eaux solaires') do %>
+              chauffe-eaux-solaires
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('diffusion-chaleur') do %>
+              Diffusion de chaleur
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('energie-renouvelable') do %>
+              Energie renouvelable
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('poeles') do %>
+              Poêles
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('pompes-chaleur') do %>
+              Pompes à chaleur
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('Renouvellement-air') do %>
+              Renouvellement de l'air
+            <% end %>
+          </p>
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('12'); ?> 
+          <h5>
+            <%= link_to category_path('production-energie-verte') do %>
+              Production d'énergie verte
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('Batteries') do %>
+              batteries
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('eoliennes-domestiques') do %>
+              Eoliennes domestiques
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('onduleurs') do %>
+              Onduleurs
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('panneaux-solaires-photovoltaiques') do %>
+              Panneaux solaires photovoltaïques
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('regulateurs') do %>
+              Régulateurs
+            <% end %>
+          </p>
         </div>
         <div class="col-md-6">
-          <?php woocommerce_subcats_from_parentcat_by_ID('14'); ?>
+          <h5>
+            <%= link_to category_path('systeme-economie-energie') do %>
+              Système d'économie d'énergie
+            <% end %>
+          </h5>
+          <p>
+            <%= link_to category_path('ampoules-basse-consommation') do %>
+              Ampoules basse consommation
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('programmateur-chauffe') do %>
+              Programmateur de chauffe
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('programmateur-eclairage') do %>
+              Programmateurs d'éclairage
+            <% end %>
+          </p>
+          <p>
+            <%= link_to category_path('thermostats') do %>
+              Thermostats
+            <% end %>
+          </p>
         </div>
       </div>
     </div>
     <div class="col-md-3 col-md-offset-1 hidden-xs">
-      <?php woocommerce_subcats_from_parentcat_by_ID('9'); ?>
+      <h5>
+        <%= link_to category_path('bois') do %>
+          Pour le bois
+        <% end %>
+      </h5>
+      <p>
+        <%= link_to category_path('colles-joints') do %>
+          Colles et joints
+        <% end %>
+      </p>
+      <p>
+        <%= link_to category_path('diluants') do %>
+          Diluants
+        <% end %>
+      </p>
+      <p>
+        <%= link_to category_path('huiles-cires-protectrices') do %>
+          Huiles et cires protectrices
+        <% end %>
+      </p>
+      <p>
+        <%= link_to category_path('preparation-protection-supports') do %>
+          Préparation et protection des supports
+        <% end %>
+      </p>
+      <p>
+        <%= link_to category_path('produits-bois') do %>
+          Produits pour le bois
+        <% end %>
+      </p>
     </div> 
     <div class="col-md-6 col-xs-24 footer-social">
       <p class="bold">Suivez nous :</p>
