affiche les produits d'une categorie données et permet d'ajouter un produit au panier

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,11 @@
-show.html.erb
+<div class="container">
+  <div class="row">
+    <div class="col-xs-6 col-md-4">
+      <%= @products.count %>
+      <% @products.each do |product| %>
+        <p>test</p>
+        <%= render "product_row", product: product, order_item: @order_item %>
+      <% end %>
+    </div>
+  </div>
+</div>
