--- a/app/views/home/_svg.html.erb
+++ b/app/views/home/_svg.html.erb
@@ -7,7 +7,7 @@
   .st3{fill:#FFFFFF;stroke:#FFFFFF;stroke-width:0.0369;stroke-miterlimit:10;}
 </style>
 <g id="catégories_1_">
-  <a xlink:href="<%= category_path('portes-colles') %>"><g id="peinture__x26__colles_1_">
+  <a xlink:href="<%= category_path('peinture-colles') %>"><g id="peinture__x26__colles_1_">
     <g id="img_17_">
       <g id="Rectangle_31__x2B__Rectangle_28_copie_5_2_" class="st0">
         <defs>
