traduit les boutons et corrige le style

--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -1,12 +1,12 @@
 <div class="well">
 
   <div class="row">
-    <div class="col-xs-16">
+    <div class="col-xs-14">
       <h4><%= product.name %></h4>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-10">
       <%= form_for order_item, remote: true do |f| %>
-        <h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency order_item.unit_price %></span></h4>
+        <h4 class="text-right">Prix unitaire: <span style="color: green"><%= number_to_currency order_item.unit_price %></span></h4>
         <div class="row">
           <div class="col-xs-8">
             <%= f.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1 %>
@@ -14,12 +14,12 @@
           </div>
           <div class="col-xs-16 text-right">
             <div class="btn-group">
-              <%= f.submit "Update Quantity", class: "btn btn-primary" %>
-              <%= link_to "Delete", order_item, { data: { confirm: "Are you sure you wish to delete the product '#{order_item.product.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
+              <%= f.submit "Mettre à jour la quantité", class: "btn btn-primary" %>
+              <%= link_to "Supprimer", order_item, { data: { confirm: "êtes-vous sur de vouloir supprimer le produit '#{order_item.product.name}' de votre panier ?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
             </div>
           </div>
         </div>
-        <h4 class="text-right">Total Price: <span style="color: green"><%= number_to_currency order_item.total_price %></span></h4>
+        <h4 class="text-right">Prix total : <span style="color: green"><%= number_to_currency order_item.total_price %></span></h4>
       <% end %>
     </div>
     
