--- a/app/assets/stylesheets/layout/footer.scss
+++ b/app/assets/stylesheets/layout/footer.scss
@@ -2,6 +2,10 @@
   background: $footer-1;
   color: #fff;
   padding: 70px 0 50px 0;
+
+  a, a:hover, a:focus {
+    color: #fff;
+  }
 }
 
 .footer-container {
