--- a/app/views/categories/_product_row.html.erb
+++ b/app/views/categories/_product_row.html.erb
@@ -2,7 +2,9 @@
 
   <div class="row">
     <div class="col-xs-16">
-      <h4><%= product.name %></small></h4>
+      <%= link_to product_path(product.slug) do %>
+        <h4><%= product.name %></h4>
+      <% end %>
     </div>
     <div class="col-xs-8">  
       <%= form_for @order_item, remote: true do |f| %>
