--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -2,7 +2,9 @@
 
   <div class="row">
     <div class="col-xs-14">
-      <h4><%= product.name %></h4>
+      <%= link_to product_path(product.slug) do %>
+        <h4><%= product.name %></h4>
+      <% end %>
     </div>
     <div class="col-xs-10">
       <%= form_for order_item, remote: true do |f| %>
