met à jour le panier à l'ajout d'un produit

--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,5 +1,5 @@
 <% if @order.errors.any? || @order_item.errors.any? %>
   alert("non valide.")
 <% else %>
-  $(".cart-text").html("<%= escape_javascript(render 'layouts/cart') %>")
+  $(".block-cart").html("<%= escape_javascript(render 'layouts/cart') %>")
 <% end %>
