--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -3,6 +3,7 @@ $green-hover: #91bd5a;
 $green-no-content: #45661d;
 
 $text-color: #1c1833;
+$grey-text: #9898a1;
 
 $menu-background: #f2f0f0;
 $menu-background-hover: #d4d4d4;
@@ -11,7 +12,9 @@ $footer-1: #38a7c9;
 $footer-2: #2496c6;
 
 $grey-background: #f8f8f8;
+$grey-background-2: #f5f6fa;
 
 $color-twitter: #28a9e0;
 $color-facebook: #3b5998;
 $color-linkedin: #0177b5;
+
