--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
 @import "bootstrap/bootstrap.min";
 
 @import "variables";
+@import "mixin";
 
 @import "old-style";
 
@@ -25,6 +26,7 @@
 @import "layout/footer";
 
 @import "pages/home";
+@import "pages/product";
 
 body {
   padding-top: 60px;
