--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,31 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
-<% @images.each do |product_image| %>
-	<%= image_tag product_image.image %>
-<% end %>
+<div class="container-fluid page-product">
+	<div class="row">
+		<div class="col-md-22 col-md-offset-2">
+			<ol class="breadcrumb">
+			  <li>
+			  	<%= link_to 'Accueil', root_path %>
+			  </li>
+			  <li>
+			  	<%= link_to @product.category.name, category_path(@product.category.slug) %>
+			  </li>
+			  <li class="active"><%= @product.name %></li>
+			</ol>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-9 col-md-offset-1 product-block">
+			<% @images.each do |product_image| %>
+				<%= image_tag product_image.image %>
+			<% end %>
+		</div>
+		<div class="col-md-7 col-md-offset-1">
+			<h1 class="product-title"><%= @product.name %></h1>
+			<p class="product-description">
+				Liège naturel expansé pur conditionné en panneau rigide. Isolant thermique et phonique, le liège est obtenu à partir du chêne liège, réduit en granulés puis expansé à la vapeur. L'énergie, nécessaire à l'expansion du liège est issue à 95% de la biomasse et 5 % de l’électricité. Particulièrement adapté au milieu humide, le liège est imputrescible, résistant à l'écrasement, absorbant acoustique et auto extinguible. Durable, le liège conserve ses caractéristiques longtemps et il n'est pas attaqué par les insectes.
+			</p>
+		</div>
+		<div class="col-md-4 col-md-offset-1">
+			
+		</div>
+	</div>
+</div>
