--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,9 +19,10 @@
 			<% end %>
 		</div>
 		<div class="col-md-7 col-md-offset-1">
+			<p class="product-marque"><%= @product.marque %></p>
 			<h1 class="product-title"><%= @product.name %></h1>
 			<p class="product-description">
-				Liège naturel expansé pur conditionné en panneau rigide. Isolant thermique et phonique, le liège est obtenu à partir du chêne liège, réduit en granulés puis expansé à la vapeur. L'énergie, nécessaire à l'expansion du liège est issue à 95% de la biomasse et 5 % de l’électricité. Particulièrement adapté au milieu humide, le liège est imputrescible, résistant à l'écrasement, absorbant acoustique et auto extinguible. Durable, le liège conserve ses caractéristiques longtemps et il n'est pas attaqué par les insectes.
+				<%= @product.description %>
 			</p>
 		</div>
 		<div class="col-md-4 col-md-offset-1">
