--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,29 @@
 			</p>
 		</div>
 		<div class="col-md-4 col-md-offset-1">
+			<%= form_for @order_item, remote: true do |f| %>
+				<div class="customer-product-block">
+					<p>Votre vendeur</p>
+					<div class="select-customer">
+						
+					</div>
+				</div>
+				<div class="choose-product-block">
+					<span class="icon-choose-product"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+					<span>Choisissez votre produit</span>
+					<div class="select-product">
+						<%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+						<%= f.hidden_field :product_id, value: @product.id %>
+            <%= f.submit "Ajouter au panier", class: "add-to-cart" %>
+					</div>
+				</div>
+			<% end %>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-9 col-md-offset-1 detail-product-block">
+		</div>
+		<div class="col-md-12 col-md-offset-1 like-product-block">
 			
 		</div>
 	</div>
