--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,55 +1,56 @@
 <div class="container-fluid page-product">
-	<div class="row">
-		<div class="col-md-22 col-md-offset-2">
-			<ol class="breadcrumb">
-			  <li>
-			  	<%= link_to 'Accueil', root_path %>
-			  </li>
-			  <li>
-			  	<%= link_to @product.category.name, category_path(@product.category.slug) %>
-			  </li>
-			  <li class="active"><%= @product.name %></li>
-			</ol>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-9 col-md-offset-1 product-block">
-			<% @images.each do |product_image| %>
-				<%= image_tag product_image.image %>
-			<% end %>
-		</div>
-		<div class="col-md-7 col-md-offset-1">
-			<p class="product-marque"><%= @product.marque %></p>
-			<h1 class="product-title"><%= @product.name %></h1>
-			<p class="product-description">
-				<%= @product.description %>
-			</p>
-		</div>
-		<div class="col-md-4 col-md-offset-1">
-			<%= form_for @order_item, remote: true do |f| %>
-				<div class="customer-product-block">
-					<p>Votre vendeur</p>
-					<div class="select-customer">
-						
-					</div>
-				</div>
-				<div class="choose-product-block">
-					<span class="icon-choose-product"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
-					<span>Choisissez votre produit</span>
-					<div class="select-product">
-						<%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-						<%= f.hidden_field :product_id, value: @product.id %>
+  <div class="row">
+    <div class="col-md-22 col-md-offset-2">
+      <ol class="breadcrumb">
+        <li>
+          <%= link_to 'Accueil', root_path %>
+        </li>
+        <li>
+          <%= link_to @product.category.name, category_path(@product.category.slug) %>
+        </li>
+        <li class="active"><%= @product.name %></li>
+      </ol>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9 col-md-offset-1 product-block">
+      <% @images.each do |product_image| %>
+        <%= image_tag product_image.image %>
+      <% end %>
+    </div>
+    <div class="col-md-7 col-md-offset-1">
+      <p class="product-marque"><%= @product.marque %></p>
+      <h1 class="product-title"><%= @product.name %></h1>
+      <p class="product-description">
+        <%= @product.description %>
+      </p>
+    </div>
+    <div class="col-md-4 col-md-offset-1">
+      <%= form_for @order_item, remote: true do |f| %>
+        <div class="customer-product-block">
+          <span class="icon-customer-product"></span>
+          <span class="text-customer-product">Votre vendeur</span>
+          <div class="select-customer">
+            
+          </div>
+        </div>
+        <div class="choose-product-block">
+          <span class="icon-choose-product"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+          <span class="text-choose-product">Choisissez votre produit</span>
+          <div class="select-product">
+            <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+            <%= f.hidden_field :product_id, value: @product.id %>
             <%= f.submit "Ajouter au panier", class: "add-to-cart" %>
-					</div>
-				</div>
-			<% end %>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-9 col-md-offset-1 detail-product-block">
-		</div>
-		<div class="col-md-12 col-md-offset-1 like-product-block">
-			
-		</div>
-	</div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9 col-md-offset-1 detail-product-block">
+    </div>
+    <div class="col-md-12 col-md-offset-1 like-product-block">
+      
+    </div>
+  </div>
 </div>
