--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,7 +48,24 @@
   </div>
   <div class="row">
     <div class="col-md-9 col-md-offset-1 detail-product-block">
-      
+      <p class="title-detail-product">Détails techniques</p>
+      <div class="content-detail-product">
+        <div class="row">
+        <% @technical_details.each do |technical_detail| %>
+          <% if technical_detail.detail.length > 50 %>
+            <div class="col-md-24">
+              <p class="title-detail"><%= technical_detail.title %></p>
+              <p class="text-detail"><%= technical_detail.detail.html_safe %></p>
+            </div>
+          <% else %>
+            <div class="col-md-12">
+              <p class="title-detail"><%= technical_detail.title %></p>
+              <p class="text-detail"><%= technical_detail.detail.html_safe %></p>
+            </div>
+          <% end %>
+        <% end %>
+        </div>
+      </div>
     </div>
     <div class="col-md-12 col-md-offset-1 like-product-block">
       
