correction mineure sur la page produit

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,8 @@
   <div class="row">
     <div class="col-md-9 col-md-offset-1 product-block">
       <% @images.each do |product_image| %>
-        <%= image_tag product_image.image %>
+        <%= image_tag 'image_produit.png' %>
+        <%# image_tag product_image.image %>
       <% end %>
     </div>
     <div class="col-md-7 col-md-offset-1">
