--- a/app/views/categories/_product_row.html.erb
+++ b/app/views/categories/_product_row.html.erb
@@ -1,23 +1,21 @@
-<div class="well">
-
+<div class="one-product-block">
+  <%= form_for @order_item, remote: true do |f| %>
   <div class="row">
-    <div class="col-xs-16">
+    <div class="col-xs-14">
       <%= link_to product_path(product.slug) do %>
         <h4><%= product.name %></h4>
       <% end %>
     </div>
-    <div class="col-xs-8">  
-      <%= form_for @order_item, remote: true do |f| %>
-      <h4 class="text-right">Prix unitaire : <span style="color: green"><%= number_to_currency product.price %></span></h4>
-        <div class="input-group">
-          <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-          <div class="input-group-btn">
-            <%= f.hidden_field :product_id, value: product.id %>
-            <%= f.submit "Ajouter au panier", class: "btn btn-primary" %>
-          </div>
-        </div>
-      <% end %>
+    <div class="col-xs-10">  
+      <h4 class="text-right">
+        Prix unitaire : <span style="color: green"><%= number_to_currency product.price %></span>
+      </h4>
+      <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+      <%= f.hidden_field :product_id, value: product.id %>
     </div>
-    
   </div>
+  <div class="row">
+    <%= f.submit "Ajouter au panier", class: "add-to-cart" %>
+  </div>
+  <% end %>
 </div>
