--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid page-category">
   <div class="row">
-    <div class="col-md-22 col-md-offset-2">
+    <div class="col-md-23 col-md-offset-1">
       <ol class="breadcrumb">
         <li>
           <%= link_to 'Accueil', root_path %>
@@ -17,9 +17,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-24 col-md-12 col-md-offset-1">
+    <div class="col-xs-24 col-md-23 col-md-offset-1">
       <% @products.each do |product| %>
-        <%= render "product_row", product: product, order_item: @order_item %>
+        <div class="col-md-6 col-xs-24">
+          <%= render "product_row", product: product, order_item: @order_item %>
+        </div>
       <% end %>
     </div>
   </div>
