--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="slider-home hidden-xs">
+<!--<section class="slider-home hidden-xs">
   <div class="owl-controls clickable">
     <span id="owl-slider-prev"><i class="fa fa-arrow-left"></i></span>
     <span id="owl-slider-next"><i class="fa fa-arrow-right"></i></span>
@@ -13,6 +13,16 @@
         </div>
       </div>
     <% end %>
+  </div>
+</section>-->
+<section class="jumbotron">
+  <div class="container">
+      <h1>Baseline</h1>
+      <form class="searchBar">
+        <input type="text" class="" placeholder="Recherche">
+        <button class="btn btn-default search-button" type="button"></button>
+      </form>
+    
   </div>
 </section>
 <section class="categories-home">
@@ -109,7 +119,7 @@
           <%= image_tag("img-article-default.png") %>
           <div class="info-article">
             <h2>titre article</h2>
-            <p class="text-justify">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+            <p class="">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
             <div>
               <span class="date"><i class="fa fa-clock-o"></i> 6 octobre 2015</span> <span class="author"><i class="fa fa-user"></i> Climatériaux</span>
             </div>
