--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,3 +1,5 @@
+/******* COLORS ********/
+
 $green: #75ad31;
 $green-hover: #91bd5a;
 $green-no-content: #45661d;
@@ -17,4 +19,8 @@ $grey-background-2: #f5f6fa;
 $color-twitter: #28a9e0;
 $color-facebook: #3b5998;
 $color-linkedin: #0177b5;
+
+/******* SHADOWS ********/
+
+$shadow: 0px 1px 2px 0px rgba(199,199,199,0.50);
 
