--- a/app/assets/stylesheets/_old-style.scss
+++ b/app/assets/stylesheets/_old-style.scss
@@ -25,9 +25,9 @@ Tags:one-column, two-columns, right-sidebar, responsive-layout, custom-backgroun
 -------------------------------------------------------------- */
 @font-face {
     font-family: 'Milo OT';
-    src: url('fonts/ufonts.com_milo-text.eot') format('eot'),
-         url('fonts/ufonts.com_milo-text.woff') format('woff'),
-         url('fonts/ufonts.com_milo-text.ttf') format('truetype');
+    src: font-url('milo-text.eot') format('eot'),
+         font-url('milo-text.woff') format('woff'),
+         font-url('milo-text.ttf') format('truetype');
 }
 
 body,
