permet de faire une recherche - partie 2 (fin)

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -33,10 +33,10 @@
       color:#fff;
     }
 
-    .searchBar{
+    .search-bar{
       padding-top:60px;
 
-      input{
+      .search-field {
         height:60px;
         width:700px;
         background: #FFF;
@@ -44,7 +44,7 @@
         border:0;
       }
 
-      button{
+      .search-button {
         border-radius: 0 5px 5px 0;
         height: 60px;
         width: 60px;
